Add remaining statistics images.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -4,15 +4,68 @@
 %TODO Einleitung Scrot
 %TODO Visualisierer Scrot
 \subsection{Pathfinder-Vergleicher}
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{3_full}
   \caption[Ein vollständiger Screenshot des Pathfinder-Vergleichers.]{Pathfinder-Vergleicher-Page. Quelle: Eigenleistung}
   \label{fig:comparator_screenshot}
 \end{figure}
+\section{Statistiken}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_1}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_2}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_3}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_5}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_7}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_8}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_9}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_10}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_11}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_12}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_13}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_14}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{statistik_anhang_15}
+\end{figure}
 
 \section{Danksagung}
-\blindtext
+\subsection{Personen}
 
 \subsection{Schriftsetzung}
 Die Schriftsetzung wurde durch die freie Software \LaTeX\  und deren Autoren Leslie Lamport et. al. ermöglicht.
