Minor figure adjustments.

--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,4 +1,4 @@
-\chapter{Zusammenfassung}
+\chapter{Auswertung}
 \section{Statistiken und Vergleiche der Pathfinding-Algorithmen}
 \begin{center}
   \boxed{
