--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -14,54 +14,67 @@
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_1}
+  \caption[Messresultate der Unterkategorie 0-10 Felder für Felderdistanz.]{Messresultate der Unterkategorie 0-10 Felder für Felderdistanz. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_2}
+  \caption[Messresultate der Unterkategorie 0-10 Felder für Operationen.]{Messresultate der Unterkategorie 0-10 Felder für Operationen. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_3}
+  \caption[Messresultate der Unterkategorie 0-10 Felder für Rechenzeit in ms.]{Messresultate der Unterkategorie 0-10 Felder für Rechenzeit in ms. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_5}
+  \caption[Messresultate der Unterkategorie 11-20 Felder für Operationen.]{Messresultate der Unterkategorie 11-20 Felder für Operationen. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_7}
+  \caption[Messresultate der Unterkategorie 21-30 Felder für Felderdistanz.]{Messresultate der Unterkategorie 21-30 Felder für Felderdistanz. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_8}
+  \caption[Messresultate der Unterkategorie 21-30 Felder für Operationen.]{Messresultate der Unterkategorie 21-30 Felder für Operationen. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_9}
+  \caption[Messresultate der Unterkategorie 21-30 Felder für Rechenzeit in ms.]{Messresultate der Unterkategorie 21-30 Felder für Rechenzeit in ms. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_10}
+  \caption[Messresultate der Unterkategorie 31-40 Felder für Felderdistanz.]{Messresultate der Unterkategorie 31-40 Felder für Felderdistanz. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_11}
+  \caption[Messresultate der Unterkategorie 31-40 Felder für Operationen.]{Messresultate der Unterkategorie 31-40 Felder für Operationen. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_12}
+  \caption[Messresultate der Unterkategorie 31-40 Felder für Rechenzeit in ms.]{Messresultate der Unterkategorie 31-40 Felder für Rechenzeit in ms. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_13}
+  \caption[Messresultate der Unterkategorie 41-50 Felder für Felderdistanz.]{Messresultate der Unterkategorie 41-50 Felder für Felderdistanz. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_14}
+  \caption[Messresultate der Unterkategorie 41-50 Felder für Operationen.]{Messresultate der Unterkategorie 41-50 Felder für Operationen. Quelle: Eigenleistung}
 \end{figure}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_15}
+  \caption[Messresultate der Unterkategorie 41-50 Felder für Rechenzeit in ms.]{Messresultate der Unterkategorie 41-50 Felder für Rechenzeit in ms. Quelle: Eigenleistung}
 \end{figure}
 
 \section{Danksagung}
