--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -131,9 +131,9 @@ Heuristik. Die Manhattan Heuristik, auch Cityblock-metrix, wurde
 Ausgewählt, da das Raster dieser Berufsmaturitätsarbeit an einem Schachbrett
 ähnelt mit immer dem gleichen Abstand zwischen den Feldern.
 Die Manhattan Heuristik ist definiert durch:
-\begin{equation}
+\begin{equation*}
 d\big((x_1,y_1),(x_2,y_2)\big) = |x_1 - x_{2}| + |y_{1} - y_{2}|
-\end{equation}
+\end{equation*}
 für alle Punkte im Raster. Die Distanz d ist gleich der länge aller Wege, die $P_1$ und $P_2$ entlang der Horizontaler und Vertikaler Linie Verbindet. $P_2$ ist bei dieser Arbeit immer der Zielpunkt und $P_1$ der
 Aktuelle Standpunkt im Raster. \cite[Patel, 2019]{heuristicsredblob}
 
