--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -4,14 +4,14 @@
 
 \subsection{Was sind Algorithmen}
 
-Ein Algorithmus beschreibt eine abstrakte Form eines Aufgabenlösungsweg.
+Ein Algorithmus beschreibt eine abstrakte Form eines Aufgabenlösungswegs.
 Er besteht aus klaren Handlungsvorschriften, die in Form einer Kette
-oder Reihe in Einzelschritten abgearbeitet werden müssen, um ein Problem
+oder Reihe in Einzelschritten abgearbeitet werden, um ein Problem
 zu lösen. Ein Algorithmus kann den Satzaufbau einer Sprache
-vorschreiben(Subjekt, Verb, Objekt) oder die Herstellung eines Gerichts
+vorschreiben (Subjekt, Verb, Objekt) oder die Herstellung eines Gerichts
 in der Küche als Kochrezept. Es wird immer eine bestimmte Eingabe in
-eine bestimmte Ausgabe verarbeitet und das Ergebnis ist immer das
-gleiche(wie eine Funktion in der Mathematik).
+eine bestimmte Ausgabe verarbeitet. Das Ergebnis ist dabei immer das
+Gleiche, ähnlich wie bei einer Funktion in der Mathematik.
 
 Es gibt sehr einfache Algorithmen, wie Verhaltensregeln oder Gesetze, in
 denen man nachschauen kann, wie man sich in welcher Situation verhält
@@ -19,60 +19,57 @@ oder was erlaubt ist. Schwierigere Algorithmen findet man eher in der
 Mathematik, Datenanalyse oder auch im Bewusstsein der Menschen.
 \cite[Wikipedia, 2018]{wikialgo}
 
-\subsection{Was ist ein Pathfinding Algorithmus}
+\subsection{Was ist ein Pathfinding-Algorithmus}
 
-Die Pathfinding Algorithmen sind eine Unterklasse der Algorithmen, sie
-spezialisieren sich auf die suche des Optimalen Weges von einem Punkt A
-zu einem Punkt B in einem Raum. Der Raum oder die Matrix kann hierbei
+Die Pathfinding-Algorithmen sind eine Unterklasse der Algorithmen, sie
+spezialisieren sich auf die suche des optimalsten Wegs von einem Punkt $A$
+zu einem anderen Punkt $B$ in einem Raum. Der Raum oder die Matrix kann hierbei
 zweidimensional oder dreidimensional sein, in dieser Arbeit befassen wir
-uns nur um die zweidimensionalen Pathfinding Algorithmen.
+uns nur mit den Pathfinding-Algorithmen im zweidimensionalen Raum.
 
 Bei Computerspielen kann der Raum das Spielfeld sein, wo unter anderem
-eine Computergesteuerte Person(Künstliche Intelligenz = KI) immer auf
-den Spieler zu läuft und ihn in einem definierten Abstand umkreis.
+eine Computergesteuerte Person (künstliche Intelligenz $=$ KI) immer auf
+den Spieler zuläuft oder ihn in einem definierten Abstand umkreist.
 
-Bei unserem heutigen Internet infrastruktur helfen Pathfinding
-Algorithmen unsere Daten über Routenplanung effizient von unserem
-Computer zum Server der aufgerufen Homepage zu leiten und wieder zurück.
+Bei der heutigen Internetinfrastruktur helfen Pathfinding-Algorithmen unsere Daten über Routenplanung effizient von unserem
+Computer zum Server der aufgerufenen Website zu leiten und wieder zurück.
 
 Die Pathfinding-Algorithmen suchen sich generell den kostengünstigsten
 oder kürzesten Weg mit wenig Hindernissen aus. Ein Vogel kann mühelos
 über einen Berg fliegen und legt bloss die direkte Luftlinie als
 Wegstrecke zurück, wir Menschen müssen meistens um den Berg herum reisen
-oder ihn in Schlangenlinien Förmigen Wanderwege überwinden.
+oder ihn in schlangenlinigförmigen Wanderwegen überwinden.
 
-Ob dieser Wanderweg der Optimalste ist, hängt von verschiedenen Faktoren
-ab, eventuell gibt es sinnvollere Wege zum Ziel.
-
-Einer dieser Faktoren kann sein:
+Ob dieser Wanderweg der optimalste ist, hängt von verschiedenen Faktoren
+ab, da es eventuell sinnvollere Wege zum Ziel gibt.
 
 \begin{itemize}
 \item
-  Man möchte am schnellsten am Ziel sein, vorzugsweise sucht man sich
-  eine Öffentliche Fortbewegung wie ein Bus.(Zeit-Optimierung)
+  \textbf{Zeitoptimierung}: Man möchte am schnellsten am Ziel sein, vorzugsweise sucht man sich
+  eine öffentliche Fortbewegung wie ein Bus.
 \item
-  Man hat nicht unbegrenzt Geld und sucht sich den billigsten Weg
-  heraus(Kosten-Optimierung).
+  \textbf{Kostenoptimierung}: Man hat nicht unbegrenzt Geld und sucht sich den kostengünstigsten Weg
+  heraus.
 \item
-  Man möchte auf der Wanderung von gewissen Orten Bilder mit der Kamera
-  festhalten(Weg-Optimierung)
+  \textbf{Wegoptimierung}: Man möchte auf der Wanderung von gewissen Orten Bilder mit der Kamera
+  festhalten.
 \end{itemize}
 
 Man beachte, dass egal welcher Weg ausgewählt wurde, dieser immer Vor-
-und Nachteile hat. Dies kann man unter einem Kuchendiagramm vorstellen,
-es gibt drei Parteien: Zeitoptimierung, Kostenoptimierung und
-Wegoptimierung. Egal für welche Partei man bevorzugt den Kuchen
-unterteilt, die anderen werden darunter leiden.
+und Nachteile aufweist. Dies kann man sich unter einem Kuchendiagramm vorstellen.
+Es gibt drei Stücke: Zeitoptimierung, Kostenoptimierung und
+Wegoptimierung. Egal für welches Stück bevorzugend man den Kuchen
+unterteilt, die anderen werden darunter ``leiden''.
 \cite[Wikipedia, 2018]{wikipath}
 
 \section{Einführung der Graphen}
 
 Pathfinding-Algorithmus ``sehen'' keine Wände oder Start- und
-Zielpunkte. Sie verarbeiten lediglich eingegebene Daten in ausgehende
-Daten. In unserer Webapplikation vereinfachen die
+Endpunkte. Sie verarbeiten lediglich eingegebene Daten in ausgehende
+Daten (Input und Output). In unserer Webapplikation vereinfachen die
 Pathfinding-Algorithmen die Darstellung des Raumes in nicht-negative
-(siehe Kapitel Nicht Negativ gewichtet) Graphen. Daraus kann abgeleitet
-werden, das die Pathfinding Algorithmen komplett unabhängig von der
+ Graphen (siehe \autoref{chap:nicht-negativ-gewichtet}). Daraus kann abgeleitet
+werden, dass die Pathfinding Algorithmen komplett unabhängig von der
 visuellen Darstellung des Raumes arbeiten.
 \cite[Andreas Hofmann, 2013]{pfbsc}
 
@@ -85,6 +82,13 @@ Ecken, es können aber mehrere Kanten auf eine Ecke verweisen. Jeder
 angeschaute Knoten vom Algorithmus muss über mindesten eine Verbindung
 erreichbar sein.
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=6cm]{graph1.png}
+  \caption[Zwei einfache Graphen $G_1$ und $G_2$ mit Ecken und Kanten. Quelle: Benny Sudakov, \textit{Graph Theory}, 2016, ETH Zürich.]{Zwei einfache Graphen $G_1$ und $G_2$ mit Ecken und Kanten. Quelle: Benny Sudakov, \textit{Graph Theory}, 2016, ETH Zürich.}
+  \label{fig:graph1}
+\end{figure}
+
 Die Knoten stellen bei unserer Anwendung die $x$- und $y$-Koordinaten des Raums
 dar und die Kanten die Verbindungen der einzelnen Felder. Somit hat ein
 Knoten bei Ausführung des bestimmten Algorithmus 4 Kanten. Wenn dem
@@ -93,49 +97,48 @@ Kanten.
 \cite[Franz Embacher, 2003]{uniwiengraphen}
 
 \subsection{Nicht negativ gewichtet}
+\label{chap:nicht-negativ-gewichtet}
 
 In der allgemeinen Graphentheorie sind negativ gewichtete Graphen
 erlaubt. Bei den Pathfindern jedoch nicht, da es keine negativen
-Distanzen gibt. Von Punkt A nach B ist eine positive Gewichtung der
-Strecke und der Rückweg von B nach A legt auch ein Positive Gewichtung
+Distanzen gibt. Von Punkt $A$ nach $B$ gilt eine positive Gewichtung der
+Strecke und der Rückweg von $B$ nach $A$ ebenfalls eine positive Gewichtung
 der Strecke in den Knoten.
 \cite[Krumke; Noltemeier; Schwarz; Wirth, 2000, S. 76]{graphtheoryconcepts}
 
 \subsection{Pathfinding-Graphen}
 
-In unserem Raster kann man die Graphenstruktur wie ein Schachbrett
-vorstellen, es beginnt am start und sucht Graph um Graph nach dem Ziel.
-In jedem Graph wird gespeichert von wo wessen nachbar Graph man kam und
+In unserem Raster kann man sich die Graphenstruktur wie ein Schachbrett
+vorstellen. Es beginnt am Startpunkt und sucht Graph um Graph nach dem Ziel.
+In jedem Graph wird gespeichert von wo und wessen Nachbargraph man kam und
 wie weit man vom Startpunkt entfernt ist. Findet man den gleichen Graph
 ein zweites mal, durch einen anderen Weg, wird der schnellere Weg zum
 start in den Graph geschrieben. Findet die Struktur das Ziel, so
-verweist jeder Vorgehender Graph auf den Graph davor. Diese Graphen
-Kette zeigt dann vom Ziel zum Start.
+verweist jeder Vorgehende Graph auf den Graph davor. Diese Graphenkette zeigt dann vom Ziel zum Start.
 \cite[Vinther, Vinther, 2015, S. 22]{pftwodim}
 
 %4.3 \#\#\#genauer nachkontrollieren\#\#\#\#\#\#
-%
+
 \section{Heuristiken}
 
-Im Allgemeinen können Algorithmen auf eine Heuristik zugreifeifen um
-Optimierter nach einem Weg zu suchen. Der begriff ``Heuristik'' bedeutet
-mit begrenztem Wissen oder unvollständiger Informationen die Optimale
-Lösung zu schätzen im Vorhinein. Anderst gesagt teilt die heuristik dem
-Algorithmus mit, welcher Graph am Wahrscheindlicshstem zum Zielpunkt
-Führt.
+Im Allgemeinen können Algorithmen auf eine Heuristik zugreifen, um
+optimierter nach einem Weg zu suchen. Der Begriff ``Heuristik'' bedeutet
+mit begrenztem Wissen oder unvollständiger Informationen die optimale
+Lösung im Vorhinein zu schätzen. Anders gesagt teilt die Heuristik dem
+Algorithmus mit, welcher Graphen am wahrscheinlichsten zum Zielpunkt führt.
 
-Bei den Ausgewählten Algorithmen beim Vergleichen benutzt der A* und
+Bei den ausgewählten Pathfinding-Algorithmen beim Vergleich benutzt der A* und
 BestFirstFinder die Manhattan Heuristik und der BreadthFirstFinder
-keine. Der BreadthFirstFinder benutzt in seinem Standard code nie eine
-Heuristik. Die Manhattan Heuristik, auch Cityblock-metrix, wurde
-Ausgewählt, da das Raster dieser Berufsmaturitätsarbeit an einem Schachbrett
-ähnelt mit immer dem gleichen Abstand zwischen den Feldern.
-Die Manhattan Heuristik ist definiert durch:
+keine. Der BreadthFirstFinder benutzt in seiner Standardkonfiguration nie eine
+Heuristik. Die Manhattan Heuristik, auch Cityblock-Metrik, wurde
+ausgewählt, da das Raster dieser Berufsmaturitätsarbeit einem Schachbrett
+ähnelt, mit immer dem gleichen Abstand zwischen den Feldern.\\
+Die Manhattan-Heuristik wird folgend für alle Punkte im Raster definiert:
 \begin{equation*}
 d\big((x_1,y_1),(x_2,y_2)\big) = |x_1 - x_{2}| + |y_{1} - y_{2}|
 \end{equation*}
-für alle Punkte im Raster. Die Distanz d ist gleich der länge aller Wege, die $P_1$ und $P_2$ entlang der Horizontaler und Vertikaler Linie Verbindet. $P_2$ ist bei dieser Arbeit immer der Zielpunkt und $P_1$ der
-Aktuelle Standpunkt im Raster. \cite[Patel, 2019]{heuristicsredblob}
+Die Distanz $d$ ist gleich der Länge aller Wege, die $P_1$ und $P_2$ entlang der horizontalen und vertikaler Linie verbindet. $P_2$ ist bei dieser Arbeit immer der Zielpunkt und $P_1$ der
+aktuelle Standpunkt im Raster. \cite[Patel, 2019]{heuristicsredblob}
 
 \section{Auswahl der Pathfinding-Algorithmen}
 
