--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -2,13 +2,15 @@
 \begin{abstract}
 Diese Berufsmaturitätsarbeit behandelt folgende Fragestellung: Was sind die technischen Eigenschaften und Vor- und Nachteile von drei ausgewählten Pathfinding-Algorithmen und wie unterscheiden sie sich? 
 Um diese Fragestellung zu beantworten, wird im Rahmen dieser Arbeit eine Webapplikation entwickelt, die den Benutzer in das Thema einführt und Vergleiche zwischen drei Pathfinding-Algorithmen interaktiv, parallel und mehrmals hintereinander ermöglicht. 
-Um den Vergleich möglich zu machen, generiert die Webapplikation automatisch Raster mit zufällig platzierten Wänden. Die Bedingungen (Parameter) des Vergleichs können vom Benutzer auch angepasst werden.
-Die experimentartige Webapplikation liefert für statistische Zwecke Messwerte, welche dann für die Ableitung der Vor- und Nachteile der drei Pathfinding-Algorithmen miteinbezogen werden.
-%Pathfinding-Algorithmen sind Programmabläufe, welche in der Wirtschaft und Theorie in vielen Anwendungen vorkommen, wie zum Beispiel in Videospielen, Simulationen oder der Automobilindustrie. Sie berechnen in einem Raum den Weg zwischen zwei Punkten.
-%Im Rahmen dieser Berufsmaturitätsarbeit wird eine Webapplikation entwickelt, die den Benutzer in das Thema der Pathfinding-Algorithmen einführt und einen interaktiven Vergleich von den drei ausgewählten Pathfindern A*-, BestFirst-, und BreadthFirstFinder ermöglicht und dazu Messungen mit drei Merkmalen macht. 
-%Der Vergleicher die Merkmale der verglichenen Pathfinder ``zurückgelegte Zeit'', ``Operationen'' und ``Rechenzeit''.
-%Die Webapplikation generiert für den Vergleich ein Zufallslabyrinth, markiert Start- und Endpunkte und lässt mehrere Vergleiche in Serie geschaltet zu.
-%Mithilfe des Pathfinder-Vergleichers werden im Rahmen der Arbeit auch Statistiken erstellt und ausgewertet und im schriftlichen Teil die Funktionsweisen der Pathfinder erläutert.
+Zusätzlich erklärt die Arbeit von Grund auf, was ein Pathfinding-Algorithmus ist und beschreibt die einzelnen Pathfinder und deren Funktionsweisen mit Beispielen. 
+Um den Vergleich der Pathfinding-Algorithmen möglich zu machen, generiert die Webapplikation automatisch Raster mit zufällig platzierten Wänden. Die Bedingungen (Parameter) der Vergleiche können vom Benutzer auch angepasst werden.\\
+Die Auswertung der Vergleiche mittels der Webapplikation hat ergeben, dass der BreadthFirstFinder ungefähr den gleichen Weg findet wie der A*, aber um einiges mehr an Operationen und Zeit benötigt. 
+Je grösser der Raum, desto weniger ist der BreadthFirstFinder geeignet, da er in alle Richtungen nach einer Lösung sucht und somit mit zunehmender Expansion langsamer wird. 
+Möchte man nicht zwingend den optimalsten Weg in wenigen Operationen und Zeitaufwand, so ist der BestFirstFinder geeignet.
 \\
-  Die Webapplikation ist unter \url{bma.fuerbringer.info} zugänglich. Der dazugehörige Quellcode ist frei unter \url{github.com/fuerbringer/bma} erhältlich.
+Die Webapplikation ist unter \url{bma.fuerbringer.info} zugänglich. Der dazugehörige Quellcode ist frei unter \url{github.com/fuerbringer/bma} erhältlich.
 \end{abstract}
+
+%Die experimentartige Webapplikation liefert für statistische Zwecke Messwerte, welche dann für die Ableitung der Vor- und Nachteile der drei Pathfinding-Algorithmen miteinbezogen werden.
+
+%Ziel dieser Berufsmaturitatsarbeit ist es, durch Vergleichen der einzelnen Pathfinder herauszufinden, was die Vor- und Nachteile der jeweiligen Pathfinder ist und wie sich diese untereinander unterscheiden. 
