--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -154,7 +154,7 @@ Ziel führt. Jedem Nachbarknoten wird zuerst einen Wert $d$ zugeordnet, der
 angibt, wie lange der Weg geschätzt von diesem Knoten zum Ziel führt. Der Wert $d$
 wird mit der Manhattan-Heuristik ausgerechnet. Jeder Graph mit einem $d$-Wert 
 wird in eine Liste eingetragen. Der A-Star rechnet immer die neuen
-Nachbaren des Graphen mit dem kleinsten $d$-Wert aus. Dadurch kann es
+Nachbarn des Graphen mit dem kleinsten $d$-Wert aus. Dadurch kann es
 vorkommen, das nach langer Suche der A-Star plötzlich wieder einige
 Graphen zurückspringen muss, da die neu berechneten $d$-Werte grösser als
 ein früherer gefundener $d$-Wert ist.
@@ -168,16 +168,16 @@ Alle Graphen werden in drei Listen eingetragen:
 \item Unbekannte Knoten
 \end{itemize}
 
-Bei Starten der Suche sind alle Knoten im Raster in dieser Liste.
+Beim Start der Suche sind alle Knoten im Raster in dieser Liste.
 
 \begin{itemize}
 \item Bekannte Knoten
 \end{itemize}
 
 \begin{quote}
-Wurde einem Knoten den d Wert der Heuristik zugeteilt, wird er in diese
-Liste mit dem d Wert eingetragen. Aus dieser Liste wird immer der Knoten
-mit kleinstem d Wert ausgewählt, der als nächstes angeschaut wird.
+Wurde einem Knoten der $d$-Wert der Heuristik zugeteilt, wird er in diese
+Liste mit dem $d$-Wert eingetragen. Aus dieser Liste wird immer der Knoten
+mit dem kleinstem $d$-Wert ausgewählt, der als nächstes angeschaut wird.
 \end{quote}
 
 \begin{itemize}
@@ -185,21 +185,18 @@ mit kleinstem d Wert ausgewählt, der als nächstes angeschaut wird.
 \end{itemize}
 
 \begin{quote}
-Zu diesem Knoten wurde der kleinste Weg herausgefunden, d.h. alle
+Zu diesem Knoten wurde der kleinste Weg herausgefunden, das heisst alle
 Nachbarknoten sind in der Liste mit bekannten Knoten.
 \end{quote}
 
-Jeder der Gefundenen Knoten besitzt einen Verweis auf den
-Vorgängerknoten. Wird das Ziel erreicht, kann mit hilfe dieses Zeigers
+Jeder der gefundenen Knoten besitzt einen Verweis auf den
+Vorgängerknoten. Wird das Ziel erreicht, kann mit Hilfe dieses Zeigers
 der Pfad bis zum Start ausgegeben werden.
 \cite[Schmidt, Fuchs]{asterngeo}
 
 \subsubsection{Beispiel}
 
-Blau ist Startpunkt und Grün Zielpunkt, Diagonale Verbindungen sind
-nicht verfügbar.
-
-
+Der Startpunkt ist blau und der Zielpunkt grün, wobei diagonale Verbindungen nicht verfügbar sind.
 
 \begin{table}[H]
   \begin{center}
@@ -221,7 +218,7 @@ nicht verfügbar.
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image2}}
       & 
       \vspace{0.01cm}
-      Berechne Distanzwert aller Nachbaren (rot markiert) und schreibe diese in die bekannte Knoten-Liste. Zeige auf den Vorgängigen Knoten (schwarzer Balken). Da $(4/1)$ alle bekannte Nachbaren hat, wird dieser Knoten in die Knoten-Liste der Untersuchten verschoben. Der Knopf mit den tiefsten $d$-Wert wird Angeschaut und der Prozess wird wiederholt.
+      Berechne Distanzwert aller Nachbarn (rot markiert) und schreibe diese in die bekannte Knoten-Liste. Zeige auf den Vorgängigen Knoten (schwarzer Balken). Da $(4/1)$ alle bekannte Nachbarn hat, wird dieser Knoten in die Knoten-Liste der Untersuchten verschoben. Der Knopf mit den tiefsten $d$-Wert wird Angeschaut und der Prozess wird wiederholt.
       & 
       \vspace{0.01cm}
       $(3/1)\ d = 3$
@@ -249,7 +246,7 @@ nicht verfügbar.
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image4}}
       & 
       \vspace{0.01cm}
-      Falls Graph $(3/0)$ vor dem Graph $(2/1)$ angeschaut wird (gleiche $d$-Werte), wird dieser, da er keine gültigen Nachbaren hat, in die untersuchten Knoten-Liste geschrieben.
+      Falls Graph $(3/0)$ vor dem Graph $(2/1)$ angeschaut wird (gleiche $d$-Werte), wird dieser, da er keine gültigen Nachbarn hat, in die untersuchten Knoten-Liste geschrieben.
       & 
       \vspace{0.01cm}
       $(2/1)\ d = 2$
@@ -278,6 +275,13 @@ nicht verfügbar.
       $(2/1)\ d = 2$
       $(4/1)\ d = 4$
       \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \end{center}
+\end{table}
+\begin{table}[H]
+  \begin{center}
+    \begin{tabular}{ c  p{7cm}  p{2cm}   p{2cm} }
+      \toprule
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image6}}
       & 
       \vspace{0.01cm}
@@ -298,13 +302,6 @@ nicht verfügbar.
       $(2/1)\ d = 2$
       $(4/1)\ d = 4$
       \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-    \end{tabular}
-  \end{center}
-\end{table}
-\begin{table}[H]
-  \begin{center}
-    \begin{tabular}{ c  p{7cm}  p{2cm}   p{2cm} }
-      \toprule
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image7}}
       & 
       \vspace{0.01cm}
@@ -324,22 +321,28 @@ nicht verfügbar.
 
 \subsection{BestFirstFinder}
 
-Wie der Name schon sagt sucht dieser Pathfind-Algorithmus nach dem
-erstbesten Weg zum Ziel. Im Vergleich zum A-Star hat dieser bloss eine
-Liste mit offenen Knoten. Mit der Manhattan Heuristik wird nur der Weg
-zum tiefsten Distanz wert Graph in diese Liste eingetragen, somit schaut
-der Bestfirstfinder nicht auf alle nachbarknoten.
+%Wie der Name schon sagt sucht dieser Pathfind-Algorithmus nach dem
+%erstbesten Weg zum Ziel. Im Vergleich zum A-Star hat dieser bloss eine
+%Liste mit offenen Knoten. Mit der Manhattan-Heuristik wird nur der Weg
+%zum tiefsten Distanzwert des Graphen in diese Liste eingetragen, somit schaut
+%der BestFirstFinder nicht auf alle Nachbarknoten.%%%TODO?
+Mit der Benutztung der Mannhattan-Heuristik untersucht der BestFirstFinder 
+nur den vom angeschautem Graph besten Nachbarsgraph, dies ist der Graph mit dem tiefsten
+Heursitikwert. Jeder beste Graph wird dann in die offene Liste eingetragen und die Suche
+beim nächsten Graphen wiederholt. Falls nun vom früheren Graph ein kleinerer Heursitikwert
+berechnet wurde und der jetztige Graph grössere Heuristikwerte in den neuen Nachbarn finden,
+geht der BestFirstFinder nicht zurück, ausser er landet in einer Sackgasse.
 
 \subsubsection{Funktionsweise}
 
-Es wird eine Liste für die Offenen Knoten eröffnet und der Startknoten
-wird eingetragen. Auch hier verweist jeder Knoten auf seinen Vorgänger.
-Der beste Knoten aus der Liste wird n genannt. Schau die Nachbarn von n
-an und bewerte diese mit der Heuristik, der beste Wert wird in die Liste
-eingetragen und der Ablauf wird wiederholt. Kommt ein Knoten, der
-angeschaut wird, nicht weiter, wird der zweitbeste Graph in der Liste
-Angeschaut. Es kann einer weiten Liste hinzugefügt werden, die
-geschlossene Liste, die den Lösungsweg direkt mit Abspeichert und
+Es wird eine Liste für die offenen Knoten erstellt und der Startknoten 
+eingetragen. Auch hier verweist jeder Knoten auf seinen Vorgänger.
+Der beste Knoten aus der Liste wird $n$ genannt. Der Algorithmus schaut die Nachbarn von $n$
+an und bewertet diese mit der Heuristik, wobei der beste Wert in die Liste
+eingetragen und der Ablauf wiederholt wird. Kommt ein Knoten, der
+angeschaut wird nicht weiter, wird der zweitbeste Graph in der Liste
+angeschaut. Ee kann einer weiteren Liste hinzugefügt werden, der
+geschlossenen Liste, die den Lösungsweg direkt  abspeichert und
 verhindert, dass dieser Algorithmus nicht in einer Endlosschleife endet.
 \cite[Roblox Developer, 2018]{robdevbff}
 
@@ -364,7 +367,7 @@ Der Startpunkt ist blau und der Zielpunkt grün, wobei diagonale Verbindungen ni
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image9}}
       & 
       \vspace{0.01cm}
-      Wähle den besten Nachbar, anhand seiner Distanz Wert d, hier ist es Graph $(3/1)$. Schreibe diesen Wert in die Liste.
+      Wähle den besten Nachbar, anhand seiner Distanzwert $d$, hier ist es Graph $(3/1)$. Schreibe diesen Wert in die Liste.
       & 
       \vspace{0.01cm}
       $(3/1)\ d = 3$
@@ -409,24 +412,24 @@ Der Startpunkt ist blau und der Zielpunkt grün, wobei diagonale Verbindungen ni
 
 \subsection{BreadthFirstFinder}
 
-Der BreadthFirstFinder benutzt keine Heuristik, da er sein Weg über die
-Breitensuche findet. Er Expandiert in jede Richtung gleich schnell und
+Der BreadthFirstFinder benutzt keine Heuristik, da er seinen Weg über die
+Breitensuche findet. Er expandiert in jede Richtung gleich schnell und
 bewegt sich nicht wie die anderen zwei Pathfinder in Richtung Ziel. Wenn
 alle Knoten mit der gleichen Distanz zum Start angeschaut sind, beginnt
-er mit der Suche der eins weiter entfernten Knoten. Dieser Pathfinder
+er mit der Suche der um eins weiter entfernten Knoten. Dieser Pathfinder
 besitzt eine Liste in der er die noch zu bearbeitenden Knoten speichert,
 beginnend mit dem am Start nächsten Knoten.
 \cite[Brilliant.org]{brilliantbfs}
 
 \subsubsection{Funktionsweise}
 
-Beginne beim Startpunkt und Speichere ihn in die Warteliste. Schaue am
-obersten Knoten in der Warteschlange dessen Nachbarn an und prüfe ob
-eines der Ausgewählten Knoten der Zielknoten ist. Ist dies der Fall wird
-die Suche Abgebrochen, da der Weg Gefunden wurde. Falls keiner der
-Knoten der Zielknoten ist, speichere die neuen Knoten in die Warteliste
-an Hinterste Stelle und entferne den Ausgewählten Knoten. Jeder Knote
-der neu gefunden wird zeigt auf den ausgewählten Knoten.
+Der Algorithmus beginnt beim Startpunkt und speichert ihn in die Warteliste. Er schaut am
+obersten Knoten in der Warteschlange dessen Nachbarn an und prüft, ob
+einer der ausgewählten Knoten der Zielknoten ist. Ist dies der Fall, wird
+die Suche abgebrochen, da der Weg gefunden wurde. Falls keiner der
+Knoten der Zielknoten ist, speichert er die neuen Knoten in der Warteliste
+an hinterster Stelle und entfernt den ausgewählten Knoten. Jeder Knote,
+der neu gefunden wird, zeigt auf den ausgewählten Knoten.
 
 \subsubsection{Beispiel}
 
@@ -449,7 +452,7 @@ Der Startpunkt ist blau und der Zielpunkt grün. Diagonale Verbindungen sind nic
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image14}}
       & 
       \vspace{0.01cm}
-      Schaue alle Nachbarn an und speichere diese in die Liste an hinterste Stelle. Falls keiner der neuen Knoten das Ziel ist, führe suche fort. Jeder neue Graph verweist auf den Vorgänger. Entferne aktuellen ausgewählten Knoten $(4/1)$.
+      Schaue alle Nachbarn an und speichere sie in die Liste an hinterster Stelle. Falls keiner der neuen Knoten das Ziel ist, führe die Suche fort. Jeder neue Graph verweist auf den Vorgänger. Entferne den aktuell ausgewählten Knoten $(4/1)$.
       & 
       \vspace{0.01cm}
       $(3/1)\ \ $
@@ -459,7 +462,7 @@ Der Startpunkt ist blau und der Zielpunkt grün. Diagonale Verbindungen sind nic
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image15}}
       & 
       \vspace{0.01cm}
-      Schaue alle Nachbarn der zurzeit in der Liste stehenden Knoten und Wiederhole alles vom oben genannte. 
+      Schaue alle Nachbarn der zurzeit in der Liste stehenden Knoten und wiederhole alles vom oben genannten. 
       & 
       \vspace{0.01cm}
       $(3/1)\ \ $
@@ -478,7 +481,7 @@ Der Startpunkt ist blau und der Zielpunkt grün. Diagonale Verbindungen sind nic
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image17}}
       & 
       \vspace{0.01cm}
-      Das Ziel Wurde Gefunden und die Suche kann beendet werden. Folgen vom Ziel zum Start und gib den Lösungsweg aus.
+      Das Ziel wurde gefunden und die Suche ist somit beendet. Folge vom Ziel zum Start und gib den Lösungsweg aus.
       & 
       \vspace{0.01cm}
       $(0/1)\ \ $
@@ -501,21 +504,21 @@ Der Startpunkt ist blau und der Zielpunkt grün. Diagonale Verbindungen sind nic
 \section{Vor- und Nachteile der einzelnen Pathfinder}
 
 Anhand der Beispiele am gleichen Raster sieht man sehr gut, dass alle
-drei Pathfinder den gleichen Weg finden durch unterschiedliche Methoden.
+drei Pathfinder den gleichen Weg durch unterschiedliche Methoden finden.
 
-Der A-Star führt viele Heuristik Berechnungen durch, da er von jedem
+Der A-Star führt viele Heuristikberechnungen durch, da er von jedem
 Knoten die Distanz zum Ziel speichern möchte. Dies erfordert mehr
-Rechenleistung beziehungsweise mehr Operationen als die beiden anderen.
-Bei Komplexeren Raste wird er jedoch immer den besseren Weg finden.
+Rechenleistung, beziehungsweise mehr Operationen als die beiden anderen.
+Bei komplexeren Rastern wird er jedoch immer den besseren Weg finden.
 
-Der BestFirstFinder untersucht nur den zuerst gefunden besten Weg und
-sucht daher zuerst in der tiefe. Er braucht weniger Rechenleistung als
-der A-Star, kann aber mühe bekommen, falls der erst gesuchte Weg in eine
+Der BestFirstFinder untersucht nur den zuerst gefundenen besten Weg und
+sucht daher zuerst in der Tiefe. Er braucht weniger Rechenleistung als
+der A-Star, kann aber Mühe bekommen, wenn der erst gesuchte Weg in eine
 Sackgasse führt. In diesem Beispiel musste er weniger Knoten anschauen
 als der A-Star, obwohl er die gleiche Heuristik benutzt.
 
-Der BreadthFirstFinder suche alle ihm am nächsten gelegenen Knoten ab
-und wird immer auf eine Lösung kommen auf Kosten der ``unnötigen''
-Knoten die weiter entfernt zum Ziel als seine aktuelle Position. Die
-Warteliste wird mit jeder neuen Expansion um ein vielfaches grösser und
-die Expansion Erweiterung wird über die Dauer langsamer.
+Der BreadthFirstFinder sucht alle ihm am nächsten gelegenen Knoten ab
+und wird immer auf eine Lösung kommen, auf Kosten der ``unnötigen''
+Knoten, die weiter entfernt zum Ziel als seine aktuelle Position sind. Die
+Warteliste wird mit jeder neuen Expansion um ein Vielfaches grösser und
+durch somit über Dauer langsamer.
