Import images and texts, with various small changes.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -1,15 +1,45 @@
 \chapter{Anhang}
 \section{Screenshots der Webapplikation}
-%TODO Willkommen Scrot
-%TODO Einleitung Scrot
-%TODO Visualisierer Scrot
+\subsection{Willkommensseite}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=16cm]{0_full}
+  \caption[Ein vollständiger Screenshot der Willkommensseite.]{Willkommensseite. Quelle: Eigenleistung}
+  \label{fig:welcome_screenshot}
+\end{figure}
+\subsection{Einleitungsseite}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=16cm]{1a_full}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=16cm]{1b_full}
+  \caption[Ein vollständiger Screenshot der Eileitungsseite.]{Einleitungsseite. Quelle: Eigenleistung}
+  \label{fig:intro_screenshot}
+\end{figure}
+\subsection{Visualisierer}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=16cm]{2_full}
+  \caption[Ein vollständiger Screenshot der Visualisierers.]{Pathfinder-Visualisierer. Quelle: Eigenleistung}
+  \label{fig:visualizer_screenshot}
+\end{figure}
 \subsection{Pathfinder-Vergleicher}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=14cm]{3_full}
+  \includegraphics[width=16cm]{3_full}
   \caption[Ein vollständiger Screenshot des Pathfinder-Vergleichers.]{Pathfinder-Vergleicher-Page. Quelle: Eigenleistung}
   \label{fig:comparator_screenshot}
 \end{figure}
+\subsection{Glossarseite}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=16cm]{4_full}
+  \caption[Ein vollständiger Screenshot der Glossarseite.]{Glossarseite. Quelle: Eigenleistung}
+  \label{fig:glossary_screenshot}
+\end{figure}
+
 \section{Statistiken}
 \begin{figure}[H]
   \centering
