--- a/thesis/realisation.tex
+++ b/thesis/realisation.tex
@@ -241,3 +241,4 @@ Aus diesen drei Merkmalen folgen zusammengefasst die in unserer Webapplikation v
   \caption[Ausschnitt aus dem Pathfinding-Vergleicher für einzelne Vergleiche.]{Vergleicherausschnitt. Quelle: Eigenleistung}
   \label{fig:gui_konzept_comparator}
 \end{figure}
+All die Teile dieses Kapitels wurden benutzt, um das technische Produkt als Webapplikation zu realisieren. Ein Screenshot des Pathfinder-Vergleichers ist im Anhang als Abbildung \ref{fig:comparator_screenshot} ersichtlich.
