Short Danksagung text.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -108,7 +108,7 @@
 \end{figure}
 
 \section{Danksagung}
-\subsection{Personen}
+An dieser Stelle der Arbeit möchten wir uns allen Personen bedanken, die uns bei der Entwicklung und Verfassung dieser Arbeit unterstützt haben.
 
 \subsection{Schriftsetzung}
 Die Schriftsetzung wurde durch die freie Software \LaTeX\  und deren Autoren Leslie Lamport et. al. ermöglicht.
