Add raw comparison result images and correct a tiny thing.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -41,6 +41,7 @@
 \end{figure}
 
 \section{Statistiken}
+\subsection{Balkendiagramme}
 \begin{figure}[H]
   \centering
   \includegraphics[width=14cm]{statistik_anhang_1}
@@ -106,6 +107,16 @@
   \includegraphics[width=14cm]{statistik_anhang_15}
   \caption[Messresultate der Unterkategorie 41-50 Felder für Rechenzeit in ms.]{Messresultate der Unterkategorie 41-50 Felder für Rechenzeit in ms. Quelle: Eigenleistung}
 \end{figure}
+\subsection{Tabellen}
+
+% TODO
+%Messresultate\_0-10\_Felder.PNG
+%Messresultate\_11-20\_Felder.PNG
+%Messresultate\_21-30\_Felder.PNG
+%Messresultate\_31-40\_Felder.PNG
+%Messresultate\_41-50\_Felder.PNG
+%Messresultate\_Durchschnitt.PNG
+
 
 \section{Danksagung}
 An dieser Stelle der Arbeit möchten wir uns allen Personen bedanken, die uns bei der Entwicklung und Verfassung dieser Arbeit unterstützt haben.
