--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -231,7 +231,7 @@ Der Startpunkt ist blau und der Zielpunkt grün, wobei diagonale Verbindungen ni
       \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image3}}
       & 
       \vspace{0.01cm}
-      Da der Graph(3/1) Alle bekannten Nachbarn hat, wird dieser Knoten in der untersuchten Knoten-Liste verschoben.
+      Da der Graph $(3/1)$ alle bekannten Nachbarn hat, wird dieser Knoten in der untersuchten Knoten-Liste verschoben.
       & 
       \vspace{0.01cm}
       $(3/0)\ d = 2$
