Complete Danksagung and add table images into tex.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -109,17 +109,44 @@
 \end{figure}
 \subsection{Tabellen}
 
-% TODO
-%Messresultate\_0-10\_Felder.PNG
-%Messresultate\_11-20\_Felder.PNG
-%Messresultate\_21-30\_Felder.PNG
-%Messresultate\_31-40\_Felder.PNG
-%Messresultate\_41-50\_Felder.PNG
-%Messresultate\_Durchschnitt.PNG
-
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_0-10_Felder.PNG}
+  \caption[Messresultate der Unterkategorie 0-10 Felder (Tabellenform).]{Messresultate der Unterkategorie 0-10 Felder (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_11-20_Felder.PNG}
+  \caption[Messresultate der Unterkategorie 11-20 Felder (Tabellenform).]{Messresultate der Unterkategorie 11-20 Felder (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_21-30_Felder.PNG}
+  \caption[Messresultate der Unterkategorie 21-30 Felder (Tabellenform).]{Messresultate der Unterkategorie 21-30 Felder (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_31-40_Felder.PNG}
+  \caption[Messresultate der Unterkategorie 31-40 Felder (Tabellenform).]{Messresultate der Unterkategorie 31-40 Felder (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_41-50_Felder.PNG}
+  \caption[Messresultate der Unterkategorie 41-50 Felder (Tabellenform).]{Messresultate der Unterkategorie 41-50 Felder (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{Messresultate_Durchschnitt.PNG}
+  \caption[Durchschnitt der Messresultate (Tabellenform).]{Durchschnitt der Messresultate (Tabellenform). Quelle: Eigenleistung}
+\end{figure}
 
 \section{Danksagung}
 An dieser Stelle der Arbeit möchten wir uns allen Personen bedanken, die uns bei der Entwicklung und Verfassung dieser Arbeit unterstützt haben.
+\\\\
+Adrian Stoop möchte seinem Kollegen Laurin Wiederkehr danken, dass er uns auf Unklarheiten und fehlende Informationen beim Schreiben durch Überprüfen der Arbeit hingewiesen hat.
+\\\\
+Severin Fürbringer möchte Austin Albrecht für die hilfreichen Vorschläge und Ideen bezüglich der Einführungstexte der Prinzipien der Pathfinder danken. Es war schwer, sich ``Real-World'' Szenarien auszudenken, mit denen man leicht den Sinn und die Funktionsweise der Pathfinder erläutern kann. Mit seiner Hilfe entstanden neue und hilfreiche Ansätze.
+
 
 \subsection{Schriftsetzung}
 Die Schriftsetzung wurde durch die freie Software \LaTeX\  und deren Autoren Leslie Lamport et. al. ermöglicht.
