--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -341,7 +341,7 @@ Der beste Knoten aus der Liste wird $n$ genannt. Der Algorithmus schaut die Nach
 an und bewertet diese mit der Heuristik, wobei der beste Wert in die Liste
 eingetragen und der Ablauf wiederholt wird. Kommt ein Knoten, der
 angeschaut wird nicht weiter, wird der zweitbeste Graph in der Liste
-angeschaut. Ee kann einer weiteren Liste hinzugefügt werden, der
+angeschaut. Er kann einer weiteren Liste hinzugefügt werden, der
 geschlossenen Liste, die den Lösungsweg direkt  abspeichert und
 verhindert, dass dieser Algorithmus nicht in einer Endlosschleife endet.
 \cite[Roblox Developer, 2018]{robdevbff}
