Add Deep-Learning to glossary.

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -176,3 +176,4 @@ In diesem Kapitel werden wichtige Wörter aus der Fachsprache erklärt, die in u
 \paragraph{Prozedural} Beschreibt programme, die schrittartig ablaufen.
 \paragraph{Routine} Unter diesem Begriff kann man im Rahmen dieser Arbeit einen Teil eines Algorithmus, einer Funktion oder einer Prozedur verstehen.
 \paragraph{Unix und GNU/Linux} Betriebssysteme abstammend vom AT\&T UNIX.
+\paragraph{Deep-Learning} Deep-Learning bedeutet etwa tiefgehendes Lernen. Es ist eine Optimierungsmethode künstlicher Neuronalnetze, die zahlreiche Zwischenlagen mittels Eingabe- und Ausgabeschicht haben und dadurch eine umfangreiche innere Struktur aufweisen.
