Add interesting comparator images.
Remove WIP

Remove WIP

--- a/thesis/extra.tex
+++ b/thesis/extra.tex
@@ -139,6 +139,22 @@
   \includegraphics[width=14cm]{Messresultate_Durchschnitt.PNG}
   \caption[Durchschnitt der Messresultate (Tabellenform).]{Durchschnitt der Messresultate (Tabellenform). Quelle: Eigenleistung}
 \end{figure}
+\section{Interessante Ausschnitte}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{interesting/11}
+  \caption[Sehr grosser Pfadlängenunterschied des BestFirstFinders.]{Der BestFirstFinder weist hier einen besonders grossen Unterschied in der Pfadlänge auf. Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{interesting/1}
+  \caption[Eine Abbiegung des BestFirstFinders, welche zu einem längeren Weg führt.]{Eine Abbiegung des BestFirstFinders, welche zu einem längeren Weg führt. Quelle: Eigenleistung}
+\end{figure}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=14cm]{interesting/12}
+  \caption[Ein Resultat, bei dem jeder Pathfinder eine andere Pfadlänge errechnet hat.]{Verschiedene Pfadlängen bei allen drei Pathfindern. Quelle: Eigenleistung}
+\end{figure}
 
 \section{Danksagung}
 An dieser Stelle der Arbeit möchten wir uns allen Personen bedanken, die uns bei der Entwicklung und Verfassung dieser Arbeit unterstützt haben.
